Fix in barceloneta word wrap in event listing

--- a/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
+++ b/plonetheme/barceloneta/theme/less/barceloneta-compiled.css
@@ -4347,6 +4347,9 @@ body.template-logged_out #content-core .portletFooter {
   top: 5px;
   position: relative;
 }
+.vevent span.cal_month {
+  font-size: 1.1em;
+}
 .event.summary {
   font-weight: 300;
   max-width: 300px;
