--- a/plonetheme/barceloneta/theme/less/event.plone.less
+++ b/plonetheme/barceloneta/theme/less/event.plone.less
@@ -1,5 +1,16 @@
 //*// EVENT //*//
 
+//*// p.a.event.browser.resources overrides
+//*// p.a.event CSS should be transferred in the near future here
+
+.vevent {
+	span.cal_month {
+    	font-size:1.1em;
+	}
+}
+
+//*//
+
 .event.summary {
 	font-weight: @plone-font-weight-regular;
 	max-width: 300px;
